samples/_failures_safe/1761473227_e8cf27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41112d61.c: In function ‘main’:
./samples/SAFE/__tmp_41112d61.c:132:23: error: expected ‘;’ at end of input
  132 |         destroy_matrix
      |                       ^
      |                       ;
./samples/SAFE/__tmp_41112d61.c:132:9: error: expected declaration or statement at end of input
  132 |         destroy_matrix
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_41112d61.c:132:9: error: expected declaration or statement at end of input
